--- a/config/docker.service
+++ b/config/docker.service
@@ -10,7 +10,7 @@ Type=notify
 # the default is not to use systemd for cgroups because the delegate issues still
 # exists and systemd currently does not support the cgroup feature set required
 # for containers run by docker
-ExecStart=/usr/bin/dockerd -H fd:// --containerd=/run/containerd/containerd.sock -H=tcp://0.0.0.0:2376 --tlsverify --tlscacert=/etc/docker/certs.d/ca-xjp.pem --tlscert=/etc/docker/certs.d/server-cert-xjp.pem --tlskey=/etc/docker/certs.d/server-key-xjp.pem
+ExecStart=/usr/bin/dockerd -H fd:// --containerd=/run/containerd/containerd.sock 
 ExecReload=/bin/kill -s HUP $MAINPID
 TimeoutStartSec=0
 RestartSec=2
